# OOP-laba5

./: CMakeLists.txt  dynamic_array.h  main.cpp
